<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestAndroidUI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="password_hint">Enter your password</string>
    <string name="username_hint">Enter your username</string>
    <string name="banck_label">Bank:</string>
    <string name="radio_person_label">Person</string>
    <string name="radio_company_label">Company</string>
    <string name="btn_login_label">Login</string>

    <string-array name="banks">
        <item>BRD</item>
        <item>ING</item>
        <item>Banca Transilvania</item>
        <item>BCR</item>
    </string-array>

    <string name="title_activity_account_list">AccountListActivity</string>

</resources>