<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txt_username_label"
        style="@style/LoginScreenLabel"
        android:text="@string/username_label" />

    <EditText
        android:id="@+id/edt_username"
        style="@style/LoginInputField"
        android:layout_below="@id/txt_username_label"
        android:hint="@string/username_hint" >
    </EditText>

    <TextView
        android:id="@+id/txt_password_label"
        style="@style/LoginScreenLabel"
        android:layout_below="@id/edt_username"
        android:text="@string/password_label" />

    <EditText
        android:id="@+id/edt_password"
        style="@style/LoginPasswordField"
        android:layout_below="@id/txt_password_label"
        android:hint="@string/password_hint" >
    </EditText>

    <TextView
        android:id="@+id/txt_bank_label"
        style="@style/LoginScreenLabel"
        android:layout_below="@id/edt_password"
        android:text="@string/banck_label" />

    <Spinner
        android:id="@+id/spinner_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_bank_label"
        android:entries="@array/banks" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_bank"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_person_label" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </View>

        <RadioButton
            android:id="@+id/radio_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_company_label" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:minWidth="200dp"
        android:text="@string/btn_login_label" />

</RelativeLayout>